# test-log-analyzer

./: Cargo.toml  DESIGN.md  config.toml
benches/: log_benchmarks.rs
src/: config.rs  errors.rs  file_handler.rs  lib.rs  main.rs
src/log_processor/: mod.rs  parallel.rs  sequential.rs
